# M2

M2/Macaulay2/c/: CMakeLists.txt  Makefile.in  chk.c  compat.h  cprint.cpp  cprint.h  dictionary.c  error.c  error.h  scc-core.cc  scc-core.hpp  scc.h  scc1.cpp  scc1.h
M2/Macaulay2/d/: M2inits.cpp  M2lib.cpp  M2mem.cpp  M2mem.h  M2types.cpp  Makefile.files.in  Makefile.in  actors2.dd  actors3.dd  actors5.dd  basic.dd  common.dd  debug.c  gdbm_interface.cpp  gmp.dd  gmp1.dd  gmp_aux.h  interp.dd  pari-c.cc  pthread.dd  scclib.cpp  struct.dd  types.h
M2/Macaulay2/dumpdata/: map.h
M2/Macaulay2/e/: Makefile.in  aring-gf-flint-big.hpp  aring-gf-flint.hpp  aring-qq-flint.hpp  complex.cpp  exptable.cpp  newdelete.cpp  newdelete.hpp  table.h
M2/Macaulay2/e/f4/: Makefile.in
M2/Macaulay2/kernel/bibasis/: Makefile.in
M2/Macaulay2/m2/: html.m2  tvalues-make.m2
M2/Macaulay2/system/: Makefile.in  m2file.cpp  m2file.hpp  m2fileinterface.h  m2util.hpp  mutex.h  mutexclass.hpp  pthread-methods.hpp  supervisor.cpp  supervisor.hpp  supervisorinterface.h  tests.cpp
M2/Macaulay2/util/: gc_test.c
